# Selecta

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_Streamlit  Makefile  README.md  Selecta.py  SongCategoriser.py  app.py  build_disk_image.sh  config.py  icon.icns  main.py  note.txt  pyproject.toml  requirements.txt  run.sh  selecta.spec
.github/: CODEOWNERS
.github/workflows/: build.yml
backend/: TODO.txt  api.py  auth.py  models.py  mongo_db.py  mongo_lifespan.py  playlists.py  songs.py
classes/: data_model.py  early_stopping.py  model.py  song.py  songs.py
desktop_app/: AnalysePage.py  AnalysisWorker.py  AnalysisWorkerSignals.py  LoginWindow.py  MainWindow.py  PlaylistsPage.py  SongsPage.py  app.py
hooks/: tensorflow_hook.py
old/: config.py  main.py
old/classes/: data_model.py  model.py  song.py
pyqt5/: desktop_app.py
src/app/: AnalysisWorker.py  AnalysisWorkerSignals.py  MainWindow.py  PlaylistsPanel.py  SongsPanel.py  test_main_window.py
src/backend/: api.py  auth.py  models.py  mongo_lifespan.py  playlists.py  yamnet.py
src/desktop_app/: AnalysePage.py  LoginWindow.py  MainWindow.py  PlaylistsPage.py
src/selecta/: Song.py  SongCategoriser.py  SongProcessor.py  SongProcessorDesktop.py  blob_storage.py  logger.py  main_new.py  mongo_db.py  utils.py  yamnet_model.py
streamlit/: components.py  desktop_app.py  streamlit_app.py
utils/: uninstall_all_packages.py
