[project]
name = "selecta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "librosa>=0.10.2.post1",
    "motor>=3.7.0",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pathlib>=1.0.1",
    "pre-commit>=4.0.1",
    "pydantic[email]>=2.11.3",
    "pyqt6>=6.8.0",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.8.6",
    "stqdm>=0.0.5",
    "streamlit>=1.41.1",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]

[tool.ruff]
show-fixes = true
line-length = 120

[tool.setuptools]
packages = ["selecta"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backnd = "setuptools.build_meta"
