[project]
name = "selecta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.18",
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.1",
    "azure-storage-queue>=12.12.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "librosa>=0.10.2.post1",
    "motor>=3.7.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pre-commit>=4.0.1",
    "pydantic[email]>=2.11.7",
    "pyinstaller>=6.14.1",

    "pyqt5>=5.15.9",

    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.8.6",
    "scipy>=1.13.1",
    "stqdm>=0.0.5",
    "streamlit>=1.41.1",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]

[tool.ruff]
show-fixes = true
line-length = 120
lint.select = ["F401"]


[tool.setuptools]
packages = ["selecta"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
