[project]
name = "selecta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "keras>=3.10.0",
    "librosa>=0.11.0",
    "pandas>=2.3.3",
    "pyqt5>=5.15.11",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
show-fixes = true
line-length = 120
lint.select = ["F401"]


[tool.setuptools]
packages = ["selecta"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
